_prototypes/end-to-end/style.css
/* ... */
.input {
    border: 1px solid #222;
    padding: .38911rem .5rem;
}

.input:focus {
    outline: none;
    box-shadow: 0 0 0 3px #fd0;
    outline: 1px solid #222;
    outline-offset: -2px;
}

.input--checkbox,
.input--radio {
    border: 2px solid #222;
    top: .75rem;
    width: 1.25rem;
    height: 1.25rem;
}

.radio__input:checked,
.input--radio:checked {
    background: #222;
    -webkit-box-shadow: inset 0 0 0 3px #fff;
    box-shadow: inset 0 0 0 3px #fff;
}

.input--checkbox:checked {
    background: url(/img/icons/icons--check.svg) no-repeat 50%;
    background-size: 14px;
}

.label {
    color: #222;
}

.label.u-fs-r,
.label > .u-fs-r {
    line-height: 1.6;
}

.label--inline {
    padding: .6rem 1rem .6rem 2.45rem;
}
 
.label--negative {
    display: block;
    margin-left: -1.85rem;
    margin-top: .25rem;
}

p.label--negative:empty {
    margin-top: 0!important;
}

.label__description {
    font-size: .77777778rem;
    font-weight: normal;
}

.radio__other {
    display: block;
    padding-bottom: .6rem;
    padding-left: .6rem;
    padding-right: .6rem;
}

.input--radio:checked~.radio__other--open {
    background-color: #f5f5f5;
}
.input--radio:checked~.radio__other {
    background-color: #f5f5f5;
}

.input--checkbox:checked~.label:before, 
.input--radio:checked~.label:before {
    box-shadow: 0 0 0 2px #222;
}

.input--checkbox:checked, 
.input--checkbox:focus {
    border-color: #222;
    outline: none;
    box-shadow: none;
}

.input--checkbox:focus~.label:before, 
.input--radio:focus~.label:before {
    outline: 1px solid #222;
    outline-offset: -2px;
    -webkit-box-shadow: 0 0 0 3px #fd0;
    box-shadow: 0 0 0 3px #fd0;
}

.input--radio:focus:checked {
    border-color: #222;
    background-color: #222;
    outline:none;
}

.radio__input {
    border-radius: 50%;
    -webkit-box-shadow: inset 0 0 0 3px #fff;
    box-shadow: inset 0 0 0 3px #fff;
    outline: none;
}

.input--radio:focus {
    box-shadow: none;
    border-radius: 100px;
    box-shadow: inset 0 0 0 3px #fff;
}

.typeahead__combobox--focused {
    -webkit-box-shadow: 0 0 0 3px #fd0;
    box-shadow: 0 0 0 3px #fd0;    
}
.typeahead--has-results .typeahead__input {
    border-bottom-right-radius: 3px;
    border-bottom-left-radius: 3px;
}

.typeahead__listbox,
.typeahead__combobox--focused .typeahead__listbox {
    margin-top: .5rem;
    border: 1px solid #222;
    border-radius: 3px;
}

.typeahead__listbox:before {
    content: 'Suggestions';
    border-bottom: 1px solid #222;
}
.typeahead__listbox:before,
.typeahead__option--more-results {
    font-size: .7rem;
    display: block;
    background: #d0d0d0;
    padding: 0.25rem 0.5rem;
}

.typeahead__option:not(:last-child){
    border-bottom: 1px solid #222;
}

.typeahead__combobox--focused {
    box-shadow: none!important;
}

.typeahead__combobox--focused input {
    outline: none;
    -webkit-box-shadow: 0 0 0 3px #fd0!important;
    box-shadow: 0 0 0 3px #fd0!important;
    outline: 1px solid #222;
    outline-offset: -2px;
}

.typeahead__option--no-results {
    background: none;
}

.field--multiplechoice .field__item.has-focus, 
.field--multiplechoice .field__item.has-focus.is-checked {
    border-color: #222;
    -webkit-box-shadow: 0 0 0 3px #fd0;
    box-shadow: 0 0 0 3px #fd0;
    outline: 1px solid #222;
    outline-offset: -2px;
}


.fieldset__legend {
    display: block;
    margin-bottom: .4rem;
    color: inherit;
    font-weight: 400;
    font-size: 1rem;
}

.input--radio:not(:checked)~.field__other--open {
    display: block;
}

.input--radio:not(:checked)~.radio__other {
    display: none;
}

.collapsible__body {
    padding-left: 1.3rem;
    border-left: 5px solid #ccc;
}

/* Highlight */
.highlight {
    padding: 0 2px;
    background-color: #e4f972!important;
}

.btn {
    width: auto;
}

.btn--secondary {
    background: #d0d0d0;
    color: #222;
    font-weight: 400;
}

.btn--secondary:hover {
    background: #c0c0c0;
}

/* CTA button */
.btn--link {
    display: inline-block;
    padding: 0;
    line-height: 1.15;
}

.btn--link .btn__inner {
    display: inherit;
    padding: 0.75em 1em;
}

.btn--link .btn__inner:after {
    content: '';
    display: inline-block;
    width: .8rem;
    height: .8rem;
    background-image: url(/img/icons/guidance-white.svg);
    background-repeat: no-repeat;
    background-size: .8rem .8rem;
    margin: 0 0 0 .5rem;
    vertical-align: middle;
}

.btn--link.btn--ghost-blue .btn__inner:after, .btn--link.btn--ghost-blue:active .btn__inner:after, .btn--link.btn--ghost-blue:hover:focus .btn__inner:after {
    display: inline-block;
    width: .8rem;
    height: .8rem;
    background-image: url(/img/icons/icons--chevron-right-blue.svg);
    background-repeat: no-repeat;
    background-size: .8rem .8rem;
}

/**
 * Hub
**/
.summary__block {
    border-bottom: none;
}

.summary__answer {
    font-weight: 600;
}

#visitor-surveys {
    border-top: 1px solid #888;
}

.summary__item {
  border-top: none;
}

.summary__item:not(:last-child) {
  border-bottom: 1px solid #888;
}

.list.list--people-plain {
  margin-bottom : 1rem;
  list-style-type : none;
}

.list.list--people-plain .list__item {
  background: url(/img/icons/person.svg) 0 .2rem no-repeat;
}

.list.list--people-plain .list__item-name {
  padding-left: 1.5rem;
}

.list.list--people-plain .list__item-actions {
  margin-top: -4px;
}

.list.list--people-plain .list__item-action + .list__item-action {
  margin-left : .5rem;
}

@media only screen and (min-width: 500px) {
    .list--inline\@s .list__item {
        margin: .25rem 1rem .25rem .5rem;
    }
}

/**
 * Summary records
 */
hr {
    box-sizing: content-box;
    height: 1px;
    overflow: visible;
    border: 0;
    border-bottom: 1px solid #888;
    border-style: solid;
    margin: 0;
}

.list.list--records .list__item {
    margin-bottom: 0;
    padding: 1rem 0;
}

.summary__block,
.list.list--records .list__item:not(:last-child) {
    border-bottom: 1px solid #888;
}
/* ... */

